# my-ticket-bot

./: .env  .expample.env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  pylintrc  pyproject.toml
.github/workflows/: main.yml
my_ticket_bot/src/: main.py
my_ticket_bot/src/models/: __init__.py  place.py
my_tickets_bot/backend/: Dockerfile  go.mod  go.sum
my_tickets_bot/backend/src/: injection.go  main.go  postgres.go
my_tickets_bot/bot/: Dockerfile  pylintrc  pyproject.toml
my_tickets_bot/bot/migrations/: run_migrations.py
my_tickets_bot/bot/src/: server.py
my_tickets_bot/migrations/: alembic.ini  run_migrations.py
my_tickets_bot/src/: main.py
my_tickets_bot/src/api/: app.py  consts.py  models.py
my_tickets_bot/src/bot/: bulk_mailing.py  buttons.py  callbacks.py  commands.py  emoji.py  forms.py  keybaords.py  messages.py  paginator.py  utils.py
my_tickets_bot/src/models/: city.py  event.py  file.py  location.py  place.py  ticket.py  user.py
my_tickets_bot/src/parsers/: __init__.py
my_tickets_bot/src/services/: calendar.py  city.py  config.py  event_time.py  localization.py  notifications.py  object_storage.py  paginator.py  profile.py  repository.py  sql.py
tests/: conftest.py
tests/bot/: test_emoji.py  test_utils.py
tests/parsers/nsk/: test_globus.py  test_old_house.py  test_podzemka.py  test_red_torch.py
tests/parsers/spb/: test_malyshchitsky.py
tests/services/: test_config.py  test_event_time.py  test_statistic.py
tests/services/repositories/: conftest.py  (+1 more)
(+195 files in other folders)
