[tool.poetry]
name = "my-ticket-bot"
version = "0.1.0"
description = ""
authors = ["Stanislav Rush <911rush@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0.0b6"

[tool.poetry.dev-dependencies]
pylint = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
