[tool.poetry]
name = "my-ticket-bot"
version = "0.1.0"
description = ""
authors = ["Stanislav Rush <911rush@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0.0b7"
asyncpg = "^0.27.0"
alembic = "^1.9.3"
tzfpy = "^0.13.1"
pytz = "^2022.7.1"
validators = "^0.20.0"
APScheduler = "^3.10.0"
tzdata = "^2022.7"

[tool.poetry.dev-dependencies]
pylint = "^2.16.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
